Update endpoints
